--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 .DS_Store
 /__pycache__/
 /.vscode/
+face-recognition/High Aesthetic Photos Album Export/*
+face-recognition/res10_300x300_ssd_iter_140000.caffemodel
+face-recognition/deploy.prototxt
+merge_media_organizer_folders/__pycache__
+file_operations.log
+photos_log.txt
+face-recognition/photo_uuids.txt
+photos_log.txt
+face-recognition/largest_face_detector.log
